fix(action): remove leading current workdir (#4)
* fix(action): remove leading current workdir

Signed-off-by: Thuan Vo <thuan.votann@gmail.com>

* fix: use js action config

* fix: default env var to empty

* chore: correct env var name

---------

Signed-off-by: Thuan Vo <thuan.votann@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -13,10 +13,5 @@ inputs:
     default: "false"
 
 runs:
-  using: composite
-  steps:
-    - name: Emulate Docker CLI with podman
-      shell: bash
-      run: ./setup.sh
-      env:
-        ENABLE_PODMAN_API: ${{ inputs.podman_api }}
+  using: "node20"
+  main: "setup.js"
